Started work on parser first pass

--- a/FulminateASM/FulminateASM.vcxproj
+++ b/FulminateASM/FulminateASM.vcxproj
@@ -65,10 +65,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="parser.c" />
     <ClCompile Include="token.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
