--- a/FulminateASM/FulminateASM.vcxproj.filters
+++ b/FulminateASM/FulminateASM.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="token.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parser.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="token.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
